--- a/tarea/index.html
+++ b/tarea/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Visualizador de Matriz</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
   <div class="container">
@@ -33,3 +33,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
