--- a/cambas invaders/game.html
+++ b/cambas invaders/game.html
@@ -3,25 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Juego con Matriz</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: black;
-    }
-    canvas {
-      display: block;
-      margin: auto;
-      border: 2px dashed #880808;
-      background-color: #000;
-      background-image: url('assets/fondo.png');
-      background-size: cover;
-}
-  
-  </style>
+  <link rel="stylesheet" href="estilo.css">
+  <link rel="icon" type="image/png" href="assets/icon.png">
+
 </head>
 <body>
   <canvas id="gameCanvas" width="600" height="600"></canvas>
-  <script src="game.js"></script>
+  <script type="module" src="game.js"></script>
+
 </body>
 </html>
 
