--- a/cambas invaders/index.html
+++ b/cambas invaders/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Cambas Invaders</title>
   <link rel="stylesheet" href="css/estilo.css">
+  <link rel="icon" type="image/png" href="assets/icon.png">
+
   <style>
     body {
       margin: 0;
