--- a/cambas invaders/index.html
+++ b/cambas invaders/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Cambas Invaders</title>
+  <title>Camba´s Invaders</title>
   <link rel="stylesheet" href="css/estilo.css">
   <link rel="icon" type="image/png" href="assets/icon.png">
 
@@ -62,3 +62,4 @@
   <div class="footer">© 2025 CAMBAS INVADERS — PERROSKY GAMES</div>
 </body>
 </html>
+
