--- a/cambas invaders/index.html
+++ b/cambas invaders/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Camba´s Invaders</title>
-  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="./estilo.css">
   <link rel="icon" type="image/png" href="assets/icon.png">
 
   <style>
@@ -62,4 +62,5 @@
   <div class="footer">© 2025 CAMBAS INVADERS — PERROSKY GAMES</div>
 </body>
 </html>
+
 
