Fix HTML encoding issues in index.html

--- a/cambas invaders/index.html
+++ b/cambas invaders/index.html
@@ -59,8 +59,9 @@
       <a href="#" onclick="window.close()"><img src="assets/salir.png" alt="Salir"></a>
     </div>
   </div>
-  <div class="footer">© 2025 CAMBAS INVADERS — PERROSKY GAMES</div>
+  <div class="footer">© 2025 CAMBA'S INVADERS — PERROSKY GAMES</div>
 </body>
 </html>
+
 
 
