--- a/cambas invaders/game.html
+++ b/cambas invaders/game.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Juego con Matriz</title>
+  <title>Camba´s Invaders</title>
   <link rel="stylesheet" href="estilo.css">
   <link rel="icon" type="image/png" href="assets/icon.png">
 
@@ -13,5 +13,6 @@
 
 </body>
 </html>
+
 
 
