--- a/cambas invaders/game.html
+++ b/cambas invaders/game.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Camba´s Invaders</title>
   <link rel="stylesheet" href="estilo.css">
-  <link rel="icon" type="image/png" href="assets/icon.png">
+  <link rel="icon" type="image/png" href="assets/icon2.png">
 
 </head>
 <body>
@@ -13,6 +13,7 @@
 
 </body>
 </html>
+
 
 
 
