--- a/cambas invaders/index.html
+++ b/cambas invaders/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Camba´s Invaders</title>
   <link rel="stylesheet" href="./estilo.css">
-  <link rel="icon" type="image/png" href="assets/icon.png">
+  <link rel="icon" type="image/png" href="assets/icon2.png">
 
   <style>
     body {
@@ -62,6 +62,7 @@
   <div class="footer">© 2025 CAMBA'S INVADERS — PERROSKY GAMES</div>
 </body>
 </html>
+
 
 
 
