--- a/cambas invaders/gameover.html
+++ b/cambas invaders/gameover.html
@@ -9,9 +9,10 @@
 <body>
   <div class="menu">
     <h1>💀 GAME OVER 💀</h1>
-    <p>Tu estilo no fue suficiente para salvar el universo Gucci.</p>
+    <p>Te quedaste acopaibau.</p>
     <button onclick="location.href='index.html'">VOLVER AL INICIO</button>
     <button onclick="location.href='game.html'">REINTENTAR</button>
   </div>
 </body>
 </html>
+
