--- a/cambas invaders (copia)/game.html
+++ b/cambas invaders (copia)/game.html
@@ -2,16 +2,38 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Juego con Matriz</title>
+  <title>Camba´s Invaders</title>
   <link rel="stylesheet" href="estilo.css">
-  <link rel="icon" type="image/png" href="assets/icon.png">
-
+  <link rel="icon" type="image/png" href="assets/icon2.png">
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 20px; /* espacio entre canvas y contador */
+      margin-top: 20px;
+      font-family: Arial, sans-serif;
+    }
+    #vidas {
+      font-size: 20px;
+      font-weight: bold;
+      color: red;
+    }
+  </style>
 </head>
 <body>
+  <!-- Canvas del juego -->
   <canvas id="gameCanvas" width="600" height="600"></canvas>
-  <script type="module" src="game.js"></script>
 
+  <!-- Contador de vidas a la derecha -->
+  <div id="vidas">Vidas: 6</div>
+
+  <script type="module" src="game.js"></script>
 </body>
 </html>
+
+
+
+
 
 
