--- a/cambas invaders (copia)/index.html
+++ b/cambas invaders (copia)/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Cambas Invaders</title>
-  <link rel="stylesheet" href="css/estilo.css">
-  <link rel="icon" type="image/png" href="assets/icon.png">
+  <title>Camba´s Invaders</title>
+  <link rel="stylesheet" href="./estilo.css">
+  <link rel="icon" type="image/png" href="assets/icon2.png">
 
   <style>
     body {
@@ -59,6 +59,15 @@
       <a href="#" onclick="window.close()"><img src="assets/salir.png" alt="Salir"></a>
     </div>
   </div>
+  <div class="footer">© 2025 CAMBA'S INVADERS — PERROSKY GAMES</div>
+</body>
+</html>
+
+
+
+
+  </div>
   <div class="footer">© 2025 CAMBAS INVADERS — PERROSKY GAMES</div>
 </body>
 </html>
+
