--- a/cambas invaders/gameover.html
+++ b/cambas invaders/gameover.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <h1>¡HAS SIDO DERROTADO!</h1>
-  <p>Los invasores han tomado el control... pero aún puedes intentarlo de nuevo.</p>
+  <p>Los invasores han tomado el control...quedaste acopaibau</p>
 
   <div class="botones">
     <button onclick="location.href='game.html?nivel=1'">REINTENTAR</button>
@@ -54,3 +54,4 @@
   </div>
 </body>
 </html>
+
