--- a/cambas invaders/gameover.html
+++ b/cambas invaders/gameover.html
@@ -49,9 +49,16 @@
     <button onclick="location.href='index.html'">MENÚ PRINCIPAL</button>
   </div>
 
+   <audio autoplay loop>
+    <source src="assets/gameover.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio HTML5.
+  </audio>
+
+
   <div class="footer">
     © 2023 CAMBAS INVADERS — PENROSKY GAMES
   </div>
 </body>
 </html>
+
 
