--- a/cambas invaders/gameover.html
+++ b/cambas invaders/gameover.html
@@ -49,7 +49,7 @@
     <button onclick="location.href='index.html'">MENÚ PRINCIPAL</button>
   </div>
 
-   <audio autoplay loop>
+   <audio autoplay>
     <source src="assets/gameover.mp3" type="audio/mpeg">
     Tu navegador no soporta audio HTML5.
   </audio>
@@ -60,5 +60,6 @@
   </div>
 </body>
 </html>
+
 
 
