--- a/cambas invaders/gameover.html
+++ b/cambas invaders/gameover.html
@@ -49,10 +49,20 @@
     <button onclick="location.href='index.html'">MENÚ PRINCIPAL</button>
   </div>
 
-   <audio autoplay>
-    <source src="assets/gameover.mp3" type="audio/mpeg">
-    Tu navegador no soporta audio HTML5.
-  </audio>
+<audio id="gameover-audio">
+  <source src="assets/gameover.mp3" type="audio/mpeg">
+  Tu navegador no soporta audio HTML5.
+</audio>
+
+<script>
+  window.addEventListener("load", () => {
+    const audio = document.getElementById("gameover-audio");
+    audio.play().catch(err => {
+      console.log("El navegador bloqueó el autoplay, se necesita interacción.");
+    });
+  });
+</script>
+
 
 
   <div class="footer">
@@ -60,6 +70,7 @@
   </div>
 </body>
 </html>
+
 
 
 
