--- a/cambas invaders/gameover.html
+++ b/cambas invaders/gameover.html
@@ -6,33 +6,47 @@
   <link rel="stylesheet" href="estilo.css">
   <style>
     body {
-      background-color: black;
+      background: url('assets/fondoover.png') no-repeat center center fixed;
+      background-size: cover;
       color: white;
       font-family: 'Press Start 2P', monospace;
       text-align: center;
       padding-top: 80px;
     }
-    h1 {
-      color: red;
-      font-size: 36px;
+
+    .titulo {
       margin-bottom: 20px;
     }
-    p {
+
+    .titulo img {
+      width: 400px;
+      max-width: 90%;
+    }
+
+    .mensaje {
       font-size: 16px;
       margin-bottom: 40px;
-    }
-    .botones button {
-      background-color: red;
       color: white;
-      border: none;
-      padding: 12px 24px;
-      margin: 10px;
-      font-size: 14px;
+      text-shadow: 2px 2px 4px black;
+    }
+
+    .botones {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    .botones img {
       cursor: pointer;
+      width: 180px;
+      transition: transform 0.2s ease;
     }
-    .botones button:hover {
-      background-color: darkred;
+
+    .botones img:hover {
+      transform: scale(1.05);
     }
+
     .footer {
       margin-top: 80px;
       font-size: 10px;
@@ -41,28 +55,27 @@
   </style>
 </head>
 <body>
-  <h1>¡HAS SIDO DERROTADO!</h1>
-  <p>Los invasores han tomado el control...quedaste acopaibau</p>
-
-  <div class="botones">
-    <button onclick="location.href='game.html?nivel=1'">REINTENTAR</button>
-    <button onclick="location.href='index.html'">MENÚ PRINCIPAL</button>
+  <div class="titulo">
+    <img src="assets/gameover.png" alt="Game Over">
   </div>
 
+  <p class="mensaje">Los invasores han tomado el control... quedaste acopaibau</p>
 
-
+  <div class="botones">
+    <img src="assets/volver.png" alt="Reintentar" onclick="location.href='game.html?nivel=1'">
+    <img src="assets/menú.png" alt="Menú Principal" onclick="location.href='index.html'">
+  </div>
 
   <div class="footer">
     © 2023 CAMBAS INVADERS — PENROSKY GAMES
   </div>
-  
+
   <audio id="gameover-audio">
     <source src="assets/gameover.mp3" type="audio/mpeg">
     Tu navegador no soporta audio HTML5.
   </audio>
-  
+
   <script>
-    // reproducir audio tras el primer clic
     window.addEventListener("click", () => {
       const audio = document.getElementById("gameover-audio");
       if (audio.paused) {
