--- a/cambas invaders/gameover.html
+++ b/cambas invaders/gameover.html
@@ -63,7 +63,7 @@
 
   <div class="botones">
     <img src="assets/volver.png" alt="Reintentar" onclick="location.href='game.html?nivel=1'">
-    <img src="assets/menú.png" alt="Menú Principal" onclick="location.href='index.html'">
+    <img src="assets/menu.png" alt="Menú Principal" onclick="location.href='index.html'">
   </div>
 
   <div class="footer">
@@ -87,6 +87,7 @@
   </script>
 </body>
 </html>
+
 
 
 
