--- a/cambas invaders/gamewin.html
+++ b/cambas invaders/gamewin.html
@@ -93,7 +93,7 @@
 
   <div class="botones">
     <img src="assets/volver.png" alt="Reintentar" onclick="location.href='game.html?nivel=1'">
-    <img src="assets/menú.png" alt="Menú Principal" onclick="location.href='index.html'">
+    <img src="assets/menu.png" alt="Menú Principal" onclick="location.href='index.html'">
   </div>
 
   <div class="footer">
@@ -118,3 +118,4 @@
   </script>
 </body>
 </html>
+
