--- a/cambas invaders/gamewin.html
+++ b/cambas invaders/gamewin.html
@@ -75,7 +75,7 @@
 </head>
 <body>
   <div class="titulo">
-    <img src="assets/gameover.png" alt="Victoria">
+    <img src="assets/youwin.png" alt="Victoria">
   </div>
 
   <p class="mensaje">¡Has derrotado a los invasores! El universo te agradece.</p>
@@ -118,4 +118,5 @@
   </script>
 </body>
 </html>
+
 
