--- a/cambas invaders/gamewin.html
+++ b/cambas invaders/gamewin.html
@@ -100,15 +100,15 @@
     © 2023 CAMBAS INVADERS — PENROSKY GAMES
   </div>
 
-  <audio id="gameover-audio">
-    <source src="assets/gameover.mp3" type="audio/mpeg">
+  <audio id="gamewin-audio">
+    <source src="assets/win.mp3" type="audio/mpeg">
     Tu navegador no soporta audio HTML5.
   </audio>
 
   <script src="puntaje.js"></script>
   <script>
     window.addEventListener("click", () => {
-      const audio = document.getElementById("gameover-audio");
+      const audio = document.getElementById("gamewin-audio");
       if (audio.paused) {
         audio.play().catch(err => {
           console.log("Error al reproducir el audio:", err);
@@ -118,5 +118,6 @@
   </script>
 </body>
 </html>
+
 
 
