--- a/cambas invaders/index.html
+++ b/cambas invaders/index.html
@@ -60,8 +60,24 @@
     </div>
   </div>
   <div class="footer">© 2025 CAMBA'S INVADERS — PERROSKY GAMES</div>
+  
+  <audio id="index-audio">
+    <source src="assets/index.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio HTML5.
+  </audio>
+
+  <script>
+    window.addEventListener("click", () => {
+      const audio = document.getElementById("index-audio");
+      if (audio.paused) {
+        audio.play().catch(err => {
+          console.log("Error al reproducir el audio:", err);
+        });
+      }
+    });
 </body>
 </html>
+
 
 
 
