--- a/cambas invaders/gameover.html
+++ b/cambas invaders/gameover.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>CAMBAS INVADERS — GAME OVER</title>
   <link rel="stylesheet" href="estilo.css">
+  <link rel="icon" type="image/png" href="assets/icon2.png">
   <style>
     body {
       background: url('assets/fondoover.png') no-repeat center center fixed;
@@ -87,6 +88,7 @@
   </script>
 </body>
 </html>
+
 
 
 
