--- a/cambas invaders/gamewin.html
+++ b/cambas invaders/gamewin.html
@@ -107,6 +107,11 @@
   </audio>
 
   <script src="puntaje.js"></script>
+  
+  <script>
+    (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="Ed4X3oDtoBv1Up5gv9XVY";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+  </script>
+  
   <script>
     window.addEventListener("click", () => {
       const audio = document.getElementById("gamewin-audio");
@@ -119,6 +124,7 @@
   </script>
 </body>
 </html>
+
 
 
 
