--- a/cambas invaders/index.html
+++ b/cambas invaders/index.html
@@ -67,6 +67,10 @@
 </audio>
 
 <script>
+  (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="Ed4X3oDtoBv1Up5gv9XVY";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+</script>
+
+<script>
   document.addEventListener("DOMContentLoaded", () => {
     const audio = document.getElementById("index-audio");
     audio.volume = 1; // opcional: ajusta volumen
@@ -84,6 +88,7 @@
 
 </body>
 </html>
+
 
 
 
