--- a/cambas invaders/creditos.html
+++ b/cambas invaders/creditos.html
@@ -52,6 +52,6 @@
 <body>
   <div class="menu">
     <img src="assets/tittle.png" alt="CAMBAS INVADERS">
-    <img src="assets/mensaje.png" alt="¡Defiéndete de los invasores!">
+    <img src="assets/creditos1.png" alt="¡Defiéndete de los invasores!">
   </div>
 </body>
