--- a/cambas invaders/creditos.html
+++ b/cambas invaders/creditos.html
@@ -54,4 +54,28 @@
     <img src="assets/tittle.png" alt="CAMBAS INVADERS">
     <img src="assets/creditos1.png" alt="¡Defiéndete de los invasores!">
   </div>
+
+</audio>
+
+<script>
+  (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="GDowgfz1egtu2-Fj2iQd6";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+</script>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const audio = document.getElementById("index-audio");
+    audio.volume = 1; // opcional: ajusta volumen
+  });
+
+  window.addEventListener("click", () => {
+    const audio = document.getElementById("index-audio");
+    if (audio.paused) {
+      audio.play().catch(err => {
+        console.log("Error al reproducir el audio:", err);
+      });
+    }
+  });
+</script>
 </body>
+</html>
+
