--- a/cambas invaders/creditos.html
+++ b/cambas invaders/creditos.html
@@ -55,6 +55,9 @@
     <img src="assets/creditos1.png" alt="¡Defiéndete de los invasores!">
   </div>
 
+<audio id="index-audio" autoplay preload="auto">
+  <source src="assets/index.mp3" type="audio/mpeg">
+  Tu navegador no soporta audio HTML5.  
 </audio>
 
 <script>
