--- a/cambas invaders/gameover.html
+++ b/cambas invaders/gameover.html
@@ -60,7 +60,7 @@
     <img src="assets/gameover.png" alt="Game Over">
   </div>
 
-  <p class="mensaje">Los invasores han tomado el control... quedaste acopaibau</p>
+  <p class="mensaje">El carrito guerrero psiquico ancestral fue destruido... quedaste acopaibau</p>
 
   <div class="botones">
     <img src="assets/volver.png" alt="Reintentar" onclick="location.href='game.html?nivel=1'">
@@ -92,6 +92,7 @@
   </script>
 </body>
 </html>
+
 
 
 
